slider overflow fixed

--- a/website/libaries/flexslider/flexslider.css
+++ b/website/libaries/flexslider/flexslider.css
@@ -93,6 +93,7 @@ html[xmlns] .flexslider .slides {
 
 .flex-viewport {
   max-height: 2000px;
+  overflow: hidden;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
